12/2/12 add .optionsButton to css, style specific buttons in the Options panel, remove slider css workaround
12/2/12 use contrib css for jquery.mobile
12/2/12 use jquery to reset sliders
12/2/12 change contrib names to include "-phet" fork suffix
12/2/12 rename ControlPanel -> OptionsPanel
12/2/12 add string and code for "Options" i18n
12/2/12 put keys in html file, so I can see what's not getting translated
12/2/12 fix i18n of check boxes, account for jquery.mobile dom changes
12/2/12 remove redundant load of jquery and jquery.mobile from faraday-config.js
12/2/12 yet another ordering of css and js in hmtl file
12/2/12 load app CSS after loading jquery.mobile
11/30/12 set absolute position of Options button to upper-right using css
11/30/12 make options panel less transparent
11/30/12 first attempt at overlapping "Options" button on canvas
11/30/12 rename faraday.css
11/30/12 remove easel shim from faraday-config, removed $ import in ControlPanel
11/30/12 got contrib jquery.mobile to load by moving stuff around in html file, but not sure why...
11/30/12 add some requirejs stuff for jquery and jquery.mobile that i'm not really sure about
11/30/12 integrate work done in team/cmalley/html5/jquerymobile-test (Options overlay panel)
11/29/12 add caching of compass needles (SR)
11/28/12 rename src dir to app
11/28/12 delete empty resources dir
11/28/12 move nls dir to top level
11/28/12 move images dir to top level
11/28/12 move faraday.html to top level
11/28/12 delete data dir
11/28/12 delete empty dirs
11/28/12 remove "html" from string file names
11/28/12 delete copies of 3rd-party libs, point at contrib
11/28/12 add fr strings for i18n testing
11/28/12 faraday-html -> faraday
11/26/12 delete jquery import from html file
11/26/12 when compass is inside magnet, immediate snap needle to field orientation
11/26/12 normalize compass needle angle in kinematics algorithm
11/26/21 BarMagnet.getFieldVector -> getFieldAt