@@ -8,7 +8,7 @@
 
 /* Options panel ------------------------------------------------------------------------*/
 
-#optionsButtonDiv {
+#optionsButton {
     position: absolute;
     top: 20px;
     left: 680px;
