@@ -31,9 +31,8 @@
     <div>
 
         <!-- button to open the Options panel -->
-        <div id="optionsButtonDiv">
-            <a id="optionsButton" href="#optionsPanel" data-rel="popup" data-transition="slide" data-direction="reverse" data-position-to="window" data-role="button" data-icon="gear" data-mini="true" data-inline="true">options</a>
-        </div>
+        <a id="optionsButton" href="#optionsPanel" data-rel="popup" data-transition="slide" data-direction="reverse" data-position-to="window" data-role="button" data-icon="gear" data-mini="true"
+           data-inline="true">options</a>
 
         <!-- the Options panel is an overlay popup -->
         <div data-role="popup" id="optionsPanel" data-corners="false" data-theme="none" data-shadow="false" data-tolerance="0,0">
